--- a/game/index.html
+++ b/game/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chrome Dino ゲーム</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="game-area">
+        <div id="dino" class="dino"></div>
+        <div id="cactus" class="cactus"></div>
+    </div>
+    <script src="game.js"></script>
+</body>
+</html>
 
