--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,10 @@
         <div id="dino" class="dino"></div>
         <div id="cactus" class="cactus"></div>
     </div>
+    <div class="info">
+        <p>スペースキーでゲーム開始</p>
+        <p>タイマー: <span id="timer">0</span>秒</p>
+    </div>
     <script src="game.js"></script>
 </body>
 </html>
-
