--- a/game/index.html
+++ b/game/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Dino ゲーム</title>
+    <title>Chrome Dino 風ゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-area">
-        <div id="dino" class="dino"></div>
-        <div id="cactus" class="cactus"></div>
+        <div id="player" class="player"></div>
+        <div id="obstacle" class="obstacle"></div>
     </div>
     <div class="info">
         <p>スペースキーでゲーム開始</p>
