--- a/newgame/game.html
+++ b/newgame/game.html
@@ -28,9 +28,11 @@
             left: 50px;
         }
         .obstacle {
-            width: 20px;
-            height: 40px;
-            background-color: #FF5722;
+            width: 0; /* Width is set to 0 for triangle */
+            height: 0; /* Height is set to 0 for triangle */
+            border-left: 10px solid transparent; /* Left triangle */
+            border-right: 10px solid transparent; /* Right triangle */
+            border-bottom: 40px solid #FF5722; /* Triangle color */
             position: absolute;
             bottom: 0;
         }
@@ -48,6 +50,13 @@
             font-size: 20px;
             font-family: Arial, sans-serif;
         }
+        #collisionCount {
+            position: absolute;
+            top: 40px;
+            left: 10px;
+            font-size: 20px;
+            font-family: Arial, sans-serif;
+        }
     </style>
 </head>
 <body>
@@ -55,6 +64,7 @@
         <div class="dino" id="dino"></div>
         <div id="score">Score: 0</div>
         <div id="timer">Time: 0s</div>
+        <div id="collisionCount">Remaining Collisions: 2</div> <!-- 衝突可能回数を表示 -->
     </div>
 
     <script>
@@ -62,12 +72,13 @@
         const gameCanvas = document.getElementById('gameCanvas');
         const scoreDisplay = document.getElementById('score');
         const timerDisplay = document.getElementById('timer');
+        const collisionCountDisplay = document.getElementById('collisionCount'); // 衝突可能回数の表示
         let isJumping = false;
         let score = 0;
         let obstacleSpeed = 5;
         let timeElapsed = 0;
         let gameTimer;
-        let collisionCount = 0; // 衝突回数をカウントする変数
+        let collisionCount = 2; // 衝突可能回数を2に設定
 
         document.addEventListener('keydown', (event) => {
             if (event.code === 'Space' && !isJumping) {
@@ -87,6 +98,13 @@
                     dino.style.bottom = `${jumpHeight}px`;
                 }
             }, 20);
+            // ジャンプを0.5秒長くする
+            setTimeout(() => {
+                if (isJumping) {
+                    clearInterval(jumpInterval);
+                    fall();
+                }
+            }, 1000); // 500ms + 500ms
         }
 
         function fall() {
@@ -133,11 +151,12 @@
                 dinoRect.y < obstacleRect.y + obstacleRect.height &&
                 dinoRect.height + dinoRect.y > obstacleRect.y
             ) {
-                collisionCount++; // 衝突回数を増やす
+                collisionCount--; // 衝突回数を減らす
                 clearInterval(obstacleInterval);
                 obstacle.remove(); // 衝突後に障害物を削除
+                collisionCountDisplay.textContent = `Remaining Collisions: ${collisionCount}`; // 表示を更新
 
-                if (collisionCount >= 2) {
+                if (collisionCount <= 0) {
                     clearInterval(gameTimer);
                     alert('Game Over! Your score: ' + score);
                     location.reload();
@@ -152,7 +171,15 @@
 
         // ゲーム開始時にタイマーを開始
         gameTimer = setInterval(updateTimer, 1000);
-        setInterval(createObstacle, 2000);
+
+        // ランダムな間隔で障害物を作成
+        function startCreatingObstacles() {
+            createObstacle();
+            const interval = Math.random() * (3000 - 2000) + 2000; // 2000ms から 3000ms のランダムな間隔
+            setTimeout(startCreatingObstacles, interval);
+        }
+
+        startCreatingObstacles(); // 障害物作成を開始
     </script>
 </body>
 </html>
