--- a/newgame/game.html
+++ b/newgame/game.html
@@ -56,6 +56,15 @@
             font-size: 20px;
             font-family: Arial, sans-serif;
         }
+        #message {
+            position: absolute;
+            top: 150px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+            display: none; /* 初期は非表示 */
+        }
     </style>
 </head>
 <body>
@@ -64,6 +73,7 @@
         <div id="score">Score: 0</div>
         <div id="timer">Time: 0s</div>
         <div id="collisionCount">Collisions Left: 2</div>
+        <div id="message"></div> <!-- メッセージ用 -->
     </div>
 
     <script>
@@ -72,24 +82,37 @@
         const scoreDisplay = document.getElementById('score');
         const timerDisplay = document.getElementById('timer');
         const collisionCountDisplay = document.getElementById('collisionCount');
+        const messageDisplay = document.getElementById('message');
         let isJumping = false;
         let score = 0;
         let obstacleSpeed = 5;
         let timeElapsed = 0;
         let gameTimer;
         let collisionCount = 2;
+        let gameStarted = false; // ゲーム開始フラグ
 
         document.addEventListener('keydown', (event) => {
-            if (event.code === 'Space' && !isJumping) {
-                jump();
+            if (event.code === 'Space') {
+                if (!gameStarted) {
+                    startGame(); // ゲームを開始
+                } else if (!isJumping) {
+                    jump(); // ジャンプ
+                }
             }
         });
+
+        function startGame() {
+            gameStarted = true; // ゲーム開始フラグを立てる
+            messageDisplay.style.display = 'none'; // メッセージを非表示
+            gameTimer = setInterval(updateTimer, 1000); // タイマーを開始
+            startCreatingObstacles(); // 障害物作成を開始
+        }
 
         function jump() {
             isJumping = true;
             let jumpHeight = 0;
             const jumpInterval = setInterval(() => {
-                if (jumpHeight >= 100 * 2.5) { // プレイヤーの高さの2.5倍に設定
+                if (jumpHeight >= 100) { // プレイヤーの高さの1倍に設定
                     clearInterval(jumpInterval);
                     fall();
                 } else {
@@ -157,11 +180,29 @@
                 collisionCountDisplay.textContent = `Collisions Left: ${collisionCount}`;
 
                 if (collisionCount <= 0) {
-                    clearInterval(gameTimer);
-                    alert('Game Over! Your score: ' + score);
-                    location.reload();
+                    endGame(); // ゲームオーバー
                 }
             }
+        }
+
+        function endGame() {
+            clearInterval(gameTimer);
+            messageDisplay.textContent = `Game Over! Your score: ${score}, Time: ${timeElapsed}s`;
+            messageDisplay.style.display = 'block'; // ゲームオーバーメッセージを表示
+            gameStarted = false; // ゲーム終了フラグを立てる
+            resetGame(); // ゲームをリセット
+        }
+
+        function resetGame() {
+            score = 0;
+            timeElapsed = 0;
+            collisionCount = 2;
+            scoreDisplay.textContent = `Score: ${score}`;
+            collisionCountDisplay.textContent = `Collisions Left: ${collisionCount}`;
+            timerDisplay.textContent = `Time: ${timeElapsed}s`;
+            dino.style.bottom = '0px'; // プレイヤーの位置をリセット
+            messageDisplay.textContent = "Press Space to Start!"; // スタートメッセージを表示
+            messageDisplay.style.display = 'block'; // メッセージを表示
         }
 
         function updateTimer() {
@@ -169,15 +210,14 @@
             timerDisplay.textContent = `Time: ${timeElapsed}s`;
         }
 
-        gameTimer = setInterval(updateTimer, 1000);
-
         function startCreatingObstacles() {
             createObstacle();
             const interval = Math.random() * (3000 - 2000) + 2000;
             setTimeout(startCreatingObstacles, interval);
         }
 
-        startCreatingObstacles();
+        // ゲーム開始時のメッセージ表示
+        resetGame(); // 初期状態をリセット
     </script>
 </body>
 </html>
